--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -18,7 +18,55 @@
             android:layout_width="match_parent"
             android:layout_height="65dp"
             app:cardBackgroundColor="#074EAD"
-            app:cardCornerRadius="0dp" />
+            app:cardCornerRadius="0dp" >
+
+            <ImageView
+                android:id="@+id/imageView3"
+                android:layout_width="80dp"
+                android:layout_height="wrap_content"
+                app:srcCompat="@drawable/profile"
+                android:layout_marginLeft="45dp"
+                />
+
+            <ImageView
+                android:id="@+id/imageView4"
+                android:layout_width="60dp"
+                android:layout_height="wrap_content"
+                app:srcCompat="@drawable/money"
+                android:layout_gravity="right"
+                android:layout_marginRight="12dp"/>
+
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="200dp"
+                android:layout_height="20dp"
+                android:text="Nome do Prestador"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginLeft="25dp"
+                android:textSize="18dp"
+                android:textColor="@color/white"
+                android:layout_marginTop="8dp" />
+
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="180dp"
+                android:layout_height="20dp"
+                android:text="Função do Prestador"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginLeft="25dp"
+                android:textSize="15dp"
+                android:textColor="@color/white"
+                android:layout_marginTop="30dp" />
+
+            <ImageView
+                android:id="@+id/imageView5"
+                android:layout_width="45dp"
+                android:layout_height="wrap_content"
+                app:srcCompat="@drawable/less"
+                android:rotation="270"/>
+
+
+        </androidx.cardview.widget.CardView>
 
     </LinearLayout>
 
@@ -70,18 +118,18 @@
             android:layout_height="50dp"
             android:text="Button"
             android:layout_gravity="right"
-            android:layout_marginRight="30dp"
+            android:layout_marginRight="10dp"
             android:backgroundTint="#0000000"
             android:shadowColor="#223263"
             />
 
         <ImageView
             android:id="@+id/imageAudio"
-            android:layout_width="50dp"
-            android:layout_height="45dp"
+            android:layout_width="40dp"
+            android:layout_height="50dp"
             android:layout_gravity="right"
             app:srcCompat="@drawable/audio"
-            android:layout_marginRight="30dp"/>
+            android:layout_marginRight="10dp"/>
 
 
     </androidx.cardview.widget.CardView>
