--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="Primaria">#074EAD</color>
+    <color name="Secundária">#00277D</color>
+    <color name="Terciária">#223263</color>
+    <color name="Cinza">#DADADA</color>
+    <color name="Cinza2">#9098B1</color>
+    <color name="Preto">#FF000000</color>
+    <color name="Branco">#FFFFFFFF</color>
 </resources>
