--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -2,7 +2,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:background="white">
@@ -50,7 +49,7 @@
                 android:layout_marginTop="10dp"
                 android:textColor="@color/Branco"
                 android:text="Nome prestador"
-                android:textSize="18dp"
+                android:textSize="18sp"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginLeft="20dp"
                 android:fontFamily="sans-serif-black"/>
@@ -60,10 +59,10 @@
                 android:id="@+id/textView3"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="25dp"
+                android:layout_marginTop="25sp"
                 android:textColor="@color/Branco"
                 android:text="Função prestador"
-                android:textSize="18dp"
+                android:textSize="18sp"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginLeft="20dp"
                />
@@ -72,81 +71,77 @@
         </androidx.cardview.widget.CardView>
 
     </LinearLayout>
-
+    <!--    IMPORTANTE-->
     <androidx.cardview.widget.CardView
         cardBackgroundColor="android:blue"
         android:layout_width="match_parent"
         android:layout_height="710dp"
-        app:cardBackgroundColor="#0000"
-        >
+        app:cardBackgroundColor="00000">
 
         <ImageView
             android:id="@+id/imageView6"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:srcCompat="@drawable/images"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp"
-            />
+            app:srcCompat="@drawable/images" />
+
         <ImageView
             android:id="@+id/imageView10"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:srcCompat="@drawable/images"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="200dp"
-            />
+            app:srcCompat="@drawable/images" />
+
         <ImageView
             android:id="@+id/imageView9"
             android:layout_width="75dp"
             android:layout_height="75dp"
-            app:srcCompat="@drawable/mulher"
+            android:layout_marginLeft="340dp"
             android:layout_marginTop="100dp"
-           android:layout_marginLeft="340dp" />
+            app:srcCompat="@drawable/mulher" />
 
         <ImageView
             android:id="@+id/imageView13"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:srcCompat="@drawable/images"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="200dp"
-            />
+            app:srcCompat="@drawable/images" />
 
         <ImageView
             android:id="@+id/imageView12"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:srcCompat="@drawable/images"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="400dp"
-            />
+            app:srcCompat="@drawable/images" />
+
         <ImageView
             android:id="@+id/imageView14"
             android:layout_width="75dp"
             android:layout_height="75dp"
-            app:srcCompat="@drawable/mulher"
+            android:layout_marginLeft="340dp"
             android:layout_marginTop="300dp"
-            android:layout_marginLeft="340dp" />
+            app:srcCompat="@drawable/mulher" />
 
         <ImageView
             android:id="@+id/imageView15"
             android:layout_width="75dp"
             android:layout_height="75dp"
-            app:srcCompat="@drawable/mulher"
+            android:layout_marginLeft="340dp"
             android:layout_marginTop="500dp"
-            android:layout_marginLeft="340dp" />
+            app:srcCompat="@drawable/mulher" />
 
         <ImageView
             android:id="@+id/imageView16"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:srcCompat="@drawable/images"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="600dp"
-            />
+            app:srcCompat="@drawable/images" />
 
-        />
     </androidx.cardview.widget.CardView>
 
     <androidx.cardview.widget.CardView
@@ -201,13 +196,10 @@
             android:id="@+id/imageAudio"
             android:layout_width="40dp"
             android:layout_height="50dp"
-            android:layout_gravity="right"
+            android:layout_gravity="end"
             app:srcCompat="@drawable/audio"
-            android:layout_marginRight="10dp"
-            android:layout_marginTop="5"/>
-
+            android:layout_marginRight="10dp" />
 
     </androidx.cardview.widget.CardView>
-
 
 </LinearLayout>
