--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:background="@color/white">
+    android:background="@color/Branco">
 
 
     <LinearLayout
@@ -44,7 +44,7 @@
                 android:layout_gravity="center_horizontal"
                 android:layout_marginLeft="25dp"
                 android:textSize="18dp"
-                android:textColor="@color/white"
+                android:textColor="@color/Branco"
                 android:layout_marginTop="8dp" />
 
             <TextView
@@ -55,7 +55,7 @@
                 android:layout_gravity="center_horizontal"
                 android:layout_marginLeft="25dp"
                 android:textSize="15dp"
-                android:textColor="@color/white"
+                android:textColor="@color/Branco"
                 android:layout_marginTop="30dp" />
 
             <ImageView
@@ -119,7 +119,6 @@
             android:text="Button"
             android:layout_gravity="right"
             android:layout_marginRight="10dp"
-            android:backgroundTint="#0000000"
             android:shadowColor="#223263"
             />
 
