--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
-    android:background="white">
+    android:background="@color/Branco"
+    android:orientation="vertical">
 
 
     <LinearLayout
@@ -16,137 +15,154 @@
         <androidx.cardview.widget.CardView
             cardBackgroundColor="android:blue"
             android:layout_width="match_parent"
-            android:layout_height="65dp"
+            android:layout_height="66dp"
             app:cardBackgroundColor="#074EAD"
-            app:cardCornerRadius="0dp" >
+            app:cardCornerRadius="0dp">
 
             <ImageView
                 android:id="@+id/imageView3"
                 android:layout_width="80dp"
                 android:layout_height="wrap_content"
-                app:srcCompat="@drawable/profile"
                 android:layout_marginLeft="35dp"
-                />
+                app:srcCompat="@drawable/profile" />
 
             <ImageView
                 android:id="@+id/imageView4"
                 android:layout_width="60dp"
                 android:layout_height="wrap_content"
-                app:srcCompat="@drawable/money"
                 android:layout_gravity="right"
-                android:layout_marginRight="12dp"/>
+                android:layout_marginRight="12dp"
+                app:srcCompat="@drawable/money" />
+
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="200dp"
+                android:layout_height="20dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginLeft="25dp"
+                android:layout_marginTop="8dp"
+                android:text="Nome do Prestador"
+                android:textColor="@color/Branco"
+                android:textSize="18dp" />
+
+            <TextView
+                android:id="@+id/textView8"
+                android:layout_width="180dp"
+                android:layout_height="20dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginLeft="25dp"
+                android:layout_marginTop="30dp"
+                android:text="Função do Prestador"
+                android:textColor="@color/Branco"
+                android:textSize="15dp" />
+
 
             <ImageView
                 android:id="@+id/imageView5"
                 android:layout_width="45dp"
                 android:layout_height="wrap_content"
-                app:srcCompat="@drawable/less"
-                android:rotation="270"/>
+                android:rotation="270"
+                app:srcCompat="@drawable/less" />
 
             <TextView
                 android:id="@+id/textView2"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:textColor="@color/Branco"
-                android:text="Nome prestador"
-                android:textSize="18dp"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginLeft="20dp"
-                android:fontFamily="sans-serif-black"/>
+                android:layout_marginTop="10dp"
+                android:fontFamily="sans-serif-black"
+                android:text="Nome prestador"
+                android:textColor="@color/Branco"
+                android:textSize="18sp" />
 
 
             <TextView
                 android:id="@+id/textView3"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="25dp"
-                android:textColor="@color/Branco"
-                android:text="Função prestador"
-                android:textSize="18dp"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginLeft="20dp"
-               />
+                android:layout_marginTop="25sp"
+                android:text="Função prestador"
+                android:textColor="@color/Branco"
+                android:textSize="18sp" />
 
 
         </androidx.cardview.widget.CardView>
 
     </LinearLayout>
-
+    <!--    IMPORTANTE-->
     <androidx.cardview.widget.CardView
         cardBackgroundColor="android:blue"
         android:layout_width="match_parent"
         android:layout_height="710dp"
-        app:cardBackgroundColor="#0000"
-        >
+        app:cardBackgroundColor="@color/Branco">
 
         <ImageView
             android:id="@+id/imageView6"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:srcCompat="@drawable/images"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp"
-            />
+            app:srcCompat="@drawable/images" />
+
         <ImageView
             android:id="@+id/imageView10"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:srcCompat="@drawable/images"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="200dp"
-            />
+            app:srcCompat="@drawable/images" />
+
         <ImageView
             android:id="@+id/imageView9"
             android:layout_width="75dp"
             android:layout_height="75dp"
-            app:srcCompat="@drawable/mulher"
+            android:layout_marginLeft="340dp"
             android:layout_marginTop="100dp"
-           android:layout_marginLeft="340dp" />
+            app:srcCompat="@drawable/mulher" />
 
         <ImageView
             android:id="@+id/imageView13"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:srcCompat="@drawable/images"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="200dp"
-            />
+            app:srcCompat="@drawable/images" />
 
         <ImageView
             android:id="@+id/imageView12"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:srcCompat="@drawable/images"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="400dp"
-            />
+            app:srcCompat="@drawable/images" />
+
         <ImageView
             android:id="@+id/imageView14"
             android:layout_width="75dp"
             android:layout_height="75dp"
-            app:srcCompat="@drawable/mulher"
+            android:layout_marginLeft="340dp"
             android:layout_marginTop="300dp"
-            android:layout_marginLeft="340dp" />
+            app:srcCompat="@drawable/mulher" />
 
         <ImageView
             android:id="@+id/imageView15"
             android:layout_width="75dp"
             android:layout_height="75dp"
-            app:srcCompat="@drawable/mulher"
+            android:layout_marginLeft="340dp"
             android:layout_marginTop="500dp"
-            android:layout_marginLeft="340dp" />
+            app:srcCompat="@drawable/mulher" />
 
         <ImageView
             android:id="@+id/imageView16"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:srcCompat="@drawable/images"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="600dp"
-            />
+            app:srcCompat="@drawable/images" />
 
-        />
     </androidx.cardview.widget.CardView>
 
     <androidx.cardview.widget.CardView
@@ -160,11 +176,10 @@
             android:layout_width="310dp"
             android:layout_height="35dp"
             android:layout_gravity="left"
-            app:cardBackgroundColor="#F5F5F5"
-            app:cardCornerRadius="19dp"
-            android:layout_marginTop="14dp"
             android:layout_marginLeft="30dp"
-            >
+            android:layout_marginTop="14dp"
+            app:cardBackgroundColor="#F5F5F5"
+            app:cardCornerRadius="19dp">
 
             <TextView
                 android:id="@+id/textView4"
@@ -172,17 +187,17 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:text="Digite uma mensagem..."
-                android:textSize="18dp"/>
+                android:textSize="18dp" />
 
             <ImageView
                 android:id="@+id/imageView"
                 android:layout_width="25dp"
                 android:layout_height="25dp"
-                app:srcCompat="@drawable/attach"
                 android:layout_gravity="right"
-                android:layout_marginRight="5dp"
                 android:layout_marginTop="5dp"
-                android:rotation="340"/>
+                android:layout_marginRight="5dp"
+                android:rotation="340"
+                app:srcCompat="@drawable/attach" />
 
         </androidx.cardview.widget.CardView>
 
@@ -190,24 +205,19 @@
             android:id="@+id/button"
             android:layout_width="40dp"
             android:layout_height="50dp"
-            android:text="Button"
             android:layout_gravity="right"
             android:layout_marginRight="10dp"
-            android:backgroundTint="#0000000"
             android:shadowColor="#223263"
-            />
+            android:text="Button" />
 
         <ImageView
             android:id="@+id/imageAudio"
             android:layout_width="40dp"
             android:layout_height="50dp"
-            android:layout_gravity="right"
-            app:srcCompat="@drawable/audio"
+            android:layout_gravity="end"
             android:layout_marginRight="10dp"
-            android:layout_marginTop="5"/>
-
+            app:srcCompat="@drawable/audio" />
 
     </androidx.cardview.widget.CardView>
-
 
 </LinearLayout>
