--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -1,14 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
-<<<<<<< HEAD
-    android:background="@color/Branco">
-=======
-    android:background="white">
->>>>>>> 85992f134eddf6d8c9df3bd5e327155b063e4fe3
+    android:background="@color/Branco"
+    android:orientation="vertical">
 
 
     <LinearLayout
@@ -21,80 +17,76 @@
             android:layout_width="match_parent"
             android:layout_height="66dp"
             app:cardBackgroundColor="#074EAD"
-            app:cardCornerRadius="0dp" >
+            app:cardCornerRadius="0dp">
 
             <ImageView
                 android:id="@+id/imageView3"
                 android:layout_width="80dp"
                 android:layout_height="wrap_content"
-                app:srcCompat="@drawable/profile"
                 android:layout_marginLeft="35dp"
-                />
+                app:srcCompat="@drawable/profile" />
 
             <ImageView
                 android:id="@+id/imageView4"
                 android:layout_width="60dp"
                 android:layout_height="wrap_content"
-                app:srcCompat="@drawable/money"
                 android:layout_gravity="right"
-                android:layout_marginRight="12dp"/>
+                android:layout_marginRight="12dp"
+                app:srcCompat="@drawable/money" />
 
-<<<<<<< HEAD
             <TextView
                 android:id="@+id/textView"
                 android:layout_width="200dp"
                 android:layout_height="20dp"
-                android:text="Nome do Prestador"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginLeft="25dp"
-                android:textSize="18dp"
+                android:layout_marginTop="8dp"
+                android:text="Nome do Prestador"
                 android:textColor="@color/Branco"
-                android:layout_marginTop="8dp" />
+                android:textSize="18dp" />
 
             <TextView
-                android:id="@+id/textView2"
+                android:id="@+id/textView8"
                 android:layout_width="180dp"
                 android:layout_height="20dp"
-                android:text="Função do Prestador"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginLeft="25dp"
-                android:textSize="15dp"
+                android:layout_marginTop="30dp"
+                android:text="Função do Prestador"
                 android:textColor="@color/Branco"
-                android:layout_marginTop="30dp" />
+                android:textSize="15dp" />
 
-=======
->>>>>>> 85992f134eddf6d8c9df3bd5e327155b063e4fe3
+
             <ImageView
                 android:id="@+id/imageView5"
                 android:layout_width="45dp"
                 android:layout_height="wrap_content"
-                app:srcCompat="@drawable/less"
-                android:rotation="270"/>
+                android:rotation="270"
+                app:srcCompat="@drawable/less" />
 
             <TextView
                 android:id="@+id/textView2"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:textColor="@color/Branco"
-                android:text="Nome prestador"
-                android:textSize="18sp"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginLeft="20dp"
-                android:fontFamily="sans-serif-black"/>
+                android:layout_marginTop="10dp"
+                android:fontFamily="sans-serif-black"
+                android:text="Nome prestador"
+                android:textColor="@color/Branco"
+                android:textSize="18sp" />
 
 
             <TextView
                 android:id="@+id/textView3"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="25sp"
-                android:textColor="@color/Branco"
-                android:text="Função prestador"
-                android:textSize="18sp"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginLeft="20dp"
-               />
+                android:layout_marginTop="25sp"
+                android:text="Função prestador"
+                android:textColor="@color/Branco"
+                android:textSize="18sp" />
 
 
         </androidx.cardview.widget.CardView>
@@ -105,7 +97,7 @@
         cardBackgroundColor="android:blue"
         android:layout_width="match_parent"
         android:layout_height="710dp"
-        app:cardBackgroundColor="00000">
+        app:cardBackgroundColor="@color/Branco">
 
         <ImageView
             android:id="@+id/imageView6"
@@ -184,11 +176,10 @@
             android:layout_width="310dp"
             android:layout_height="35dp"
             android:layout_gravity="left"
-            app:cardBackgroundColor="#F5F5F5"
-            app:cardCornerRadius="19dp"
-            android:layout_marginTop="14dp"
             android:layout_marginLeft="30dp"
-            >
+            android:layout_marginTop="14dp"
+            app:cardBackgroundColor="#F5F5F5"
+            app:cardCornerRadius="19dp">
 
             <TextView
                 android:id="@+id/textView4"
@@ -196,17 +187,17 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:text="Digite uma mensagem..."
-                android:textSize="18dp"/>
+                android:textSize="18dp" />
 
             <ImageView
                 android:id="@+id/imageView"
                 android:layout_width="25dp"
                 android:layout_height="25dp"
-                app:srcCompat="@drawable/attach"
                 android:layout_gravity="right"
-                android:layout_marginRight="5dp"
                 android:layout_marginTop="5dp"
-                android:rotation="340"/>
+                android:layout_marginRight="5dp"
+                android:rotation="340"
+                app:srcCompat="@drawable/attach" />
 
         </androidx.cardview.widget.CardView>
 
@@ -214,19 +205,18 @@
             android:id="@+id/button"
             android:layout_width="40dp"
             android:layout_height="50dp"
-            android:text="Button"
             android:layout_gravity="right"
             android:layout_marginRight="10dp"
             android:shadowColor="#223263"
-            />
+            android:text="Button" />
 
         <ImageView
             android:id="@+id/imageAudio"
             android:layout_width="40dp"
             android:layout_height="50dp"
             android:layout_gravity="end"
-            app:srcCompat="@drawable/audio"
-            android:layout_marginRight="10dp" />
+            android:layout_marginRight="10dp"
+            app:srcCompat="@drawable/audio" />
 
     </androidx.cardview.widget.CardView>
 
