--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,9 +7,9 @@
 
     <fragment
         android:id="@+id/FirstFragment"
-        android:name="br.com.bauen.mainactivit.FirstFragment"
+        android:name="br.com.bauen.mainactivit.ListagemPrestadorActivity"
         android:label="@string/first_fragment_label"
-        tools:layout="@layout/fragment_first">
+        tools:layout="@layout/activity_listagem_prestador">
 
         <action
             android:id="@+id/action_FirstFragment_to_SecondFragment"
@@ -17,9 +17,9 @@
     </fragment>
     <fragment
         android:id="@+id/SecondFragment"
-        android:name="br.com.bauen.mainactivit.SecondFragment"
+        android:name="br.com.bauen.mainactivit.ChatActivity"
         android:label="@string/second_fragment_label"
-        tools:layout="@layout/fragment_second">
+        tools:layout="@layout/activity_chat">
 
         <action
             android:id="@+id/action_SecondFragment_to_FirstFragment"
