--- a/app/src/main/res/layout/activity_listagem_prestador.xml
+++ b/app/src/main/res/layout/activity_listagem_prestador.xml
@@ -1,97 +1,143 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
-    <SearchView
-        android:id="@+id/serach_View"
-        android:layout_width="258dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginBottom="16dp"
-        android:background="@drawable/searchview_menu_background" />
-
-    <ImageView
-        android:id="@+id/id_filter"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginTop="30dp"
-        android:layout_marginEnd="36dp"
-        android:layout_marginRight="36dp"
-        android:src="@drawable/filter" />
-
-    <ImageView
-        android:id="@+id/id_order"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginStart="28dp"
-        android:layout_marginLeft="28dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginEnd="79dp"
-        android:layout_marginRight="79dp"
-        android:layout_toEndOf="@+id/serach_View"
-        android:layout_toRightOf="@+id/serach_View"
-        android:src="@drawable/ordenar" />
-
-    <View
-        android:id="@+id/id_line"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/const_menu"
         android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_below="@id/serach_View"
-        android:background="#DADADA" />
+        android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/id_number_result"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/id_line"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="10dp"
-        android:text="0 Resultados"
-        android:textColor="#223263" />
+        <SearchView
+            android:id="@+id/serach_View"
+            android:layout_width="258dp"
+            android:layout_height="wrap_content"
+            android:background="@drawable/searchview_menu_background"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/id_text_premium"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/id_line"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginTop="10dp"
-        android:layout_marginRight="20dp"
-        android:text="Premium"
-        android:textColor="#223263"
-        />
+        <ImageView
+            android:id="@+id/id_filter"
+            android:layout_width="31dp"
+            android:layout_height="30dp"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:src="@drawable/filter"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/serach_View"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <View
-        android:id="@+id/id_line2"
+        <ImageView
+            android:id="@+id/id_order"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_toEndOf="@+id/serach_View"
+            android:layout_toRightOf="@+id/serach_View"
+            android:src="@drawable/ordenar"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/id_filter"
+            app:layout_constraintTop_toTopOf="parent" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/const_result_premium"
         android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_below="@id/id_number_result"
-        android:layout_marginTop="5dp"
-        android:background="#DADADA" />
+        android:layout_height="30dp">
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/id_nicho"
+        <TextView
+            android:id="@+id/id_number_result"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:text="0 Resultados"
+            android:textColor="#223263"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/id_text_premium"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:text="Premium"
+            android:textColor="#223263"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/id_number_result"
+            app:layout_constraintTop_toTopOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <HorizontalScrollView
         android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:layout_below="@id/id_line2"
-        app:cardBackgroundColor="#074EAD" />
+        android:layout_height="wrap_content"
+        android:background="@color/Primaria">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/id_nicho"
+                android:layout_width="match_parent"
+                android:layout_height="100dp">
+
+                <ImageView
+                    android:id="@+id/imageView2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@color/Branco"
+                    app:srcCompat="@drawable/attach" />
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/id_nicho3"
+                android:layout_width="match_parent"
+                android:layout_height="100dp"
+                android:layout_marginHorizontal="50dp">
+
+                <ImageView
+                    android:id="@+id/imageView3"
+                    android:layout_width="56dp"
+                    android:layout_height="96dp"
+                    android:layout_marginHorizontal="30dp"
+                    app:srcCompat="@drawable/location" />
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/id_nicho4"
+                android:layout_width="match_parent"
+                android:layout_height="100dp"
+                android:layout_marginHorizontal="50dp">
+
+                <ImageView
+                    android:id="@+id/imageView4"
+                    android:layout_width="56dp"
+                    android:layout_height="96dp"
+                    android:layout_marginHorizontal="30dp"
+                    app:srcCompat="@drawable/location" />
+            </androidx.cardview.widget.CardView>
+
+        </LinearLayout>
+    </HorizontalScrollView>
 
 
     <ListView
         android:id="@+id/list_View"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_below="@id/id_nicho"
         android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_below="@id/id_nicho"/>
-</RelativeLayout>
+        android:layout_marginRight="16dp" />
+
+
+</LinearLayout>
