Implementação de menu + Scroll PerfilPrestador

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="Cinza2">#9098B1</color>
     <color name="Preto">#FF000000</color>
     <color name="Branco">#FFFFFFFF</color>
+    <color name="Amarelo">#FFEB3B</color>
 </resources>
