--- a/app/src/main/res/layout/perfil_prestador.xml
+++ b/app/src/main/res/layout/perfil_prestador.xml
@@ -90,7 +90,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
-                    android:outlineAmbientShadowColor="@color/Branco">
+                    android:outlineAmbientShadowColor="@color/Amarelo"
+                    android:rating="3.5"
+                    android:stepSize="0.5">
 
                 </RatingBar>
 
